# HEM

./: LICENSE  README.md  bme680.py  bme680_defs.py  device.py  logger.py  main.py  oled.py  oled_thread.py  save_data.py  sensor.py  usb2iic.py  usb_device.py
bme680/: CMakeLists.txt  bme680.h
bme680/libs/Macos/: libBME680.dylib
libs/: win64.lnk
libs/mac_os/: libLucero.dylib
